--- a/pages/Create Workout Plan/widgets/ContainerMenu/TextAppTitle.json
+++ b/pages/Create Workout Plan/widgets/ContainerMenu/TextAppTitle.json
@@ -1,6 +1,6 @@
 {
     "mobileBottomRow": 5,
-    "widgetName": "Text1",
+    "widgetName": "TextAppTitle",
     "displayName": "Text",
     "iconSVG": "/static/media/icon.a47d6d5dbbb718c4dc4b2eb4f218c1b7.svg",
     "searchTags": [
@@ -10,34 +10,37 @@
     ],
     "topRow": 1,
     "bottomRow": 6,
+    "parentRowSpace": 10,
     "type": "TEXT_WIDGET",
     "hideCard": false,
-    "mobileRightColumn": 25.5,
+    "mobileRightColumn": 16,
     "animateLoading": true,
     "overflow": "NONE",
     "fontFamily": "{{appsmith.theme.fontFamily.appFont}}",
+    "parentColumnSpace": 16.046875,
     "dynamicTriggerPathList": [],
-    "leftColumn": 1,
+    "leftColumn": 0,
     "dynamicBindingPathList": [
         {"key": "truncateButtonColor"},
         {"key": "fontFamily"},
-        {"key": "borderRadius"}
+        {"key": "borderRadius"},
+        {"key": "textColor"}
     ],
     "shouldTruncate": false,
     "truncateButtonColor": "{{appsmith.theme.colors.primaryColor}}",
-    "text": "Create Workout Plan",
-    "key": "nur0d74mhc",
+    "text": "Fitness Tracking App\n",
+    "key": "97cdd5cp5h",
     "isDeprecated": false,
-    "rightColumn": 25,
+    "rightColumn": 44,
     "textAlign": "LEFT",
     "dynamicHeight": "AUTO_HEIGHT",
-    "widgetId": "00jdclyyg0",
+    "widgetId": "36i2qnv0s1",
     "minWidth": 450,
     "isVisible": true,
     "fontStyle": "BOLD",
-    "textColor": "#231F20",
+    "textColor": "{{appsmith.theme.colors.primaryColor}}",
     "version": 1,
-    "parentId": "g2t82dhlrd",
+    "parentId": "40071nvz7i",
     "tags": [
         "Suggested",
         "Content"
@@ -48,9 +51,9 @@
     "responsiveBehavior": "fill",
     "originalTopRow": 1,
     "borderRadius": "{{appsmith.theme.borderRadius.appBorderRadius}}",
-    "mobileLeftColumn": 1.5,
+    "mobileLeftColumn": 0,
     "maxDynamicHeight": 9000,
-    "originalBottomRow": 5,
+    "originalBottomRow": 6,
     "fontSize": "1.875rem",
     "minDynamicHeight": 4
 }
