--- a/pages/Home/widgets/ContainerMenu/TextAppTitle.json
+++ b/pages/Home/widgets/ContainerMenu/TextAppTitle.json
@@ -34,13 +34,13 @@
     "rightColumn": 44,
     "textAlign": "LEFT",
     "dynamicHeight": "AUTO_HEIGHT",
-    "widgetId": "m1nmkfv6bq",
+    "widgetId": "qrrv763rhl",
     "minWidth": 450,
     "isVisible": true,
     "fontStyle": "BOLD",
     "textColor": "{{appsmith.theme.colors.primaryColor}}",
     "version": 1,
-    "parentId": "ifwia5ftla",
+    "parentId": "7p7ushfl7r",
     "tags": [
         "Suggested",
         "Content"
