--- a/pages/Plan/widgets/ContainerMenu/TextAppTitle.json
+++ b/pages/Plan/widgets/ContainerMenu/TextAppTitle.json
@@ -34,13 +34,13 @@
     "rightColumn": 44,
     "textAlign": "LEFT",
     "dynamicHeight": "AUTO_HEIGHT",
-    "widgetId": "50702el9gk",
+    "widgetId": "jigbnnc5c2",
     "minWidth": 450,
     "isVisible": true,
     "fontStyle": "BOLD",
     "textColor": "{{appsmith.theme.colors.primaryColor}}",
     "version": 1,
-    "parentId": "xyu7be5llo",
+    "parentId": "tc2362n15k",
     "tags": [
         "Suggested",
         "Content"
