--- a/pages/Create Workout Plan/widgets/ContainerMenu/TextAppTitle.json
+++ b/pages/Create Workout Plan/widgets/ContainerMenu/TextAppTitle.json
@@ -34,13 +34,13 @@
     "rightColumn": 44,
     "textAlign": "LEFT",
     "dynamicHeight": "AUTO_HEIGHT",
-    "widgetId": "36i2qnv0s1",
+    "widgetId": "pq0r5u5nvz",
     "minWidth": 450,
     "isVisible": true,
     "fontStyle": "BOLD",
     "textColor": "{{appsmith.theme.colors.primaryColor}}",
     "version": 1,
-    "parentId": "40071nvz7i",
+    "parentId": "33r4sk2cwn",
     "tags": [
         "Suggested",
         "Content"
