Added Sign up Table

--- a/application.json
+++ b/application.json
@@ -27,6 +27,14 @@
     {
       "id": "Client",
       "isDefault": false
+    },
+    {
+      "id": "Profile",
+      "isDefault": false
+    },
+    {
+      "id": "Page1",
+      "isDefault": false
     }
   ],
   "viewMode": false,
