--- a/pages/Plan/widgets/ContainerMenu/TextAppTitle.json
+++ b/pages/Plan/widgets/ContainerMenu/TextAppTitle.json
@@ -34,13 +34,13 @@
     "rightColumn": 44,
     "textAlign": "LEFT",
     "dynamicHeight": "AUTO_HEIGHT",
-    "widgetId": "kcn8tujei4",
+    "widgetId": "ja8eb7kv5x",
     "minWidth": 450,
     "isVisible": true,
     "fontStyle": "BOLD",
     "textColor": "{{appsmith.theme.colors.primaryColor}}",
     "version": 1,
-    "parentId": "nckakglgzd",
+    "parentId": "yd7iq0nbbi",
     "tags": [
         "Suggested",
         "Content"
