--- a/pages/Profile/widgets/ContainerMenu/TextAppTitle.json
+++ b/pages/Profile/widgets/ContainerMenu/TextAppTitle.json
@@ -1,6 +1,6 @@
 {
-    "mobileBottomRow": 22,
-    "widgetName": "Text1",
+    "mobileBottomRow": 5,
+    "widgetName": "TextAppTitle",
     "displayName": "Text",
     "iconSVG": "/static/media/icon.a47d6d5dbbb718c4dc4b2eb4f218c1b7.svg",
     "searchTags": [
@@ -8,51 +8,52 @@
         "paragraph",
         "label"
     ],
-    "topRow": 16,
-    "bottomRow": 21,
+    "topRow": 1,
+    "bottomRow": 6,
     "parentRowSpace": 10,
     "type": "TEXT_WIDGET",
     "hideCard": false,
-    "mobileRightColumn": 15,
+    "mobileRightColumn": 16,
     "animateLoading": true,
     "overflow": "NONE",
     "fontFamily": "{{appsmith.theme.fontFamily.appFont}}",
-    "parentColumnSpace": 16.796875,
+    "parentColumnSpace": 16.046875,
     "dynamicTriggerPathList": [],
     "leftColumn": 0,
     "dynamicBindingPathList": [
         {"key": "truncateButtonColor"},
         {"key": "fontFamily"},
-        {"key": "borderRadius"}
+        {"key": "borderRadius"},
+        {"key": "textColor"}
     ],
     "shouldTruncate": false,
     "truncateButtonColor": "{{appsmith.theme.colors.primaryColor}}",
-    "text": "Client List",
-    "key": "pwnqc17fdb",
+    "text": "Fitness Tracking App\n",
+    "key": "97cdd5cp5h",
     "isDeprecated": false,
-    "rightColumn": 16,
+    "rightColumn": 44,
     "textAlign": "LEFT",
     "dynamicHeight": "AUTO_HEIGHT",
-    "widgetId": "aa7t8jxy7z",
+    "widgetId": "ryd5yawu52",
     "minWidth": 450,
     "isVisible": true,
     "fontStyle": "BOLD",
-    "textColor": "#231F20",
+    "textColor": "{{appsmith.theme.colors.primaryColor}}",
     "version": 1,
-    "parentId": "0",
+    "parentId": "w059a0i95c",
     "tags": [
         "Suggested",
         "Content"
     ],
     "renderMode": "CANVAS",
     "isLoading": false,
-    "mobileTopRow": 18,
+    "mobileTopRow": 1,
     "responsiveBehavior": "fill",
-    "originalTopRow": 16,
+    "originalTopRow": 1,
     "borderRadius": "{{appsmith.theme.borderRadius.appBorderRadius}}",
     "mobileLeftColumn": 0,
     "maxDynamicHeight": 9000,
-    "originalBottomRow": 21,
+    "originalBottomRow": 6,
     "fontSize": "1.875rem",
     "minDynamicHeight": 4
 }
