--- a/application.json
+++ b/application.json
@@ -38,6 +38,9 @@
   "unpublishedAppLayout": {
     "type": "FLUID"
   },
+  "publishedAppLayout": {
+    "type": "FLUID"
+  },
   "unpublishedCustomJSLibs": [],
   "publishedCustomJSLibs": [],
   "evaluationVersion": 2,
