--- a/pages/Create Exercise/widgets/ContainerMenu/TextAppTitle.json
+++ b/pages/Create Exercise/widgets/ContainerMenu/TextAppTitle.json
@@ -34,13 +34,13 @@
     "rightColumn": 44,
     "textAlign": "LEFT",
     "dynamicHeight": "AUTO_HEIGHT",
-    "widgetId": "4mrye9utd0",
+    "widgetId": "h6vd75197o",
     "minWidth": 450,
     "isVisible": true,
     "fontStyle": "BOLD",
     "textColor": "{{appsmith.theme.colors.primaryColor}}",
     "version": 1,
-    "parentId": "m7iih84k3m",
+    "parentId": "0sy6wlsv2c",
     "tags": [
         "Suggested",
         "Content"
