--- a/pages/Login/widgets/ContainerMenu/TextAppTitle.json
+++ b/pages/Login/widgets/ContainerMenu/TextAppTitle.json
@@ -1,6 +1,6 @@
 {
     "mobileBottomRow": 5,
-    "widgetName": "Text1",
+    "widgetName": "TextAppTitle",
     "displayName": "Text",
     "iconSVG": "/static/media/icon.a47d6d5dbbb718c4dc4b2eb4f218c1b7.svg",
     "searchTags": [
@@ -9,35 +9,38 @@
         "label"
     ],
     "topRow": 1,
-    "bottomRow": 5,
+    "bottomRow": 6,
+    "parentRowSpace": 10,
     "type": "TEXT_WIDGET",
     "hideCard": false,
-    "mobileRightColumn": 25.5,
+    "mobileRightColumn": 16,
     "animateLoading": true,
     "overflow": "NONE",
     "fontFamily": "{{appsmith.theme.fontFamily.appFont}}",
+    "parentColumnSpace": 16.046875,
     "dynamicTriggerPathList": [],
-    "leftColumn": 1,
+    "leftColumn": 0,
     "dynamicBindingPathList": [
         {"key": "truncateButtonColor"},
         {"key": "fontFamily"},
-        {"key": "borderRadius"}
+        {"key": "borderRadius"},
+        {"key": "textColor"}
     ],
     "shouldTruncate": false,
     "truncateButtonColor": "{{appsmith.theme.colors.primaryColor}}",
-    "text": "Login",
-    "key": "7yys9mxaft",
+    "text": "MyFitness\n",
+    "key": "97cdd5cp5h",
     "isDeprecated": false,
-    "rightColumn": 25,
+    "rightColumn": 44,
     "textAlign": "LEFT",
     "dynamicHeight": "AUTO_HEIGHT",
-    "widgetId": "lebqjpa0wh",
+    "widgetId": "s1gghs79an",
     "minWidth": 450,
     "isVisible": true,
     "fontStyle": "BOLD",
-    "textColor": "#231F20",
+    "textColor": "{{appsmith.theme.colors.primaryColor}}",
     "version": 1,
-    "parentId": "ozimckg8rh",
+    "parentId": "n500onoijt",
     "tags": [
         "Suggested",
         "Content"
@@ -46,9 +49,11 @@
     "isLoading": false,
     "mobileTopRow": 1,
     "responsiveBehavior": "fill",
+    "originalTopRow": 1,
     "borderRadius": "{{appsmith.theme.borderRadius.appBorderRadius}}",
-    "mobileLeftColumn": 1.5,
+    "mobileLeftColumn": 0,
     "maxDynamicHeight": 9000,
-    "fontSize": "1.25rem",
+    "originalBottomRow": 6,
+    "fontSize": "1.875rem",
     "minDynamicHeight": 4
 }
