--- a/pages/Client/widgets/ContainerMenu/TextAppTitle.json
+++ b/pages/Client/widgets/ContainerMenu/TextAppTitle.json
@@ -9,29 +9,28 @@
         "label"
     ],
     "topRow": 1,
-    "bottomRow": 6,
+    "bottomRow": 8,
     "parentRowSpace": 10,
     "type": "TEXT_WIDGET",
     "hideCard": false,
     "mobileRightColumn": 16,
     "animateLoading": true,
     "overflow": "NONE",
-    "fontFamily": "{{appsmith.theme.fontFamily.appFont}}",
+    "fontFamily": "Rubik",
     "parentColumnSpace": 16.046875,
     "dynamicTriggerPathList": [],
     "leftColumn": 0,
     "dynamicBindingPathList": [
         {"key": "truncateButtonColor"},
-        {"key": "fontFamily"},
         {"key": "borderRadius"},
         {"key": "textColor"}
     ],
     "shouldTruncate": false,
     "truncateButtonColor": "{{appsmith.theme.colors.primaryColor}}",
-    "text": "Fitness Tracking App\n",
+    "text": "MyFitness",
     "key": "97cdd5cp5h",
     "isDeprecated": false,
-    "rightColumn": 44,
+    "rightColumn": 21,
     "textAlign": "LEFT",
     "dynamicHeight": "AUTO_HEIGHT",
     "widgetId": "ie8e78l74y",
@@ -53,7 +52,7 @@
     "borderRadius": "{{appsmith.theme.borderRadius.appBorderRadius}}",
     "mobileLeftColumn": 0,
     "maxDynamicHeight": 9000,
-    "originalBottomRow": 6,
-    "fontSize": "1.875rem",
+    "originalBottomRow": 8,
+    "fontSize": "3rem",
     "minDynamicHeight": 4
 }
