--- a/pages/Plan/widgets/ContainerMenu/TextAppTitle.json
+++ b/pages/Plan/widgets/ContainerMenu/TextAppTitle.json
@@ -8,39 +8,38 @@
         "paragraph",
         "label"
     ],
-    "topRow": 1,
-    "bottomRow": 6,
+    "topRow": 0,
+    "bottomRow": 7,
     "parentRowSpace": 10,
     "type": "TEXT_WIDGET",
     "hideCard": false,
     "mobileRightColumn": 16,
     "animateLoading": true,
     "overflow": "NONE",
-    "fontFamily": "{{appsmith.theme.fontFamily.appFont}}",
+    "fontFamily": "Rubik",
     "parentColumnSpace": 16.046875,
     "dynamicTriggerPathList": [],
-    "leftColumn": 0,
+    "leftColumn": 1,
     "dynamicBindingPathList": [
         {"key": "truncateButtonColor"},
-        {"key": "fontFamily"},
         {"key": "borderRadius"},
         {"key": "textColor"}
     ],
     "shouldTruncate": false,
     "truncateButtonColor": "{{appsmith.theme.colors.primaryColor}}",
-    "text": "Fitness Tracking App\n",
+    "text": "MyFitness",
     "key": "97cdd5cp5h",
     "isDeprecated": false,
-    "rightColumn": 44,
+    "rightColumn": 23,
     "textAlign": "LEFT",
     "dynamicHeight": "AUTO_HEIGHT",
-    "widgetId": "8ixutekl0x",
+    "widgetId": "db670q9kt6",
     "minWidth": 450,
     "isVisible": true,
     "fontStyle": "BOLD",
     "textColor": "{{appsmith.theme.colors.primaryColor}}",
     "version": 1,
-    "parentId": "zlr978t3g3",
+    "parentId": "y7xiu6wbid",
     "tags": [
         "Suggested",
         "Content"
@@ -49,11 +48,11 @@
     "isLoading": false,
     "mobileTopRow": 1,
     "responsiveBehavior": "fill",
-    "originalTopRow": 1,
+    "originalTopRow": 0,
     "borderRadius": "{{appsmith.theme.borderRadius.appBorderRadius}}",
     "mobileLeftColumn": 0,
     "maxDynamicHeight": 9000,
-    "originalBottomRow": 6,
-    "fontSize": "1.875rem",
+    "originalBottomRow": 7,
+    "fontSize": "3rem",
     "minDynamicHeight": 4
 }
